@@ -1,3 +1,7 @@
+2003-05-20  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* mueller.cpp: Improve refining solver.
+
 2003-03-17  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* mueller.cpp: Improve refining solver.
